--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+*{
+    margin: 0%;
+    padding: 0%;
+    
+}
+body{
+    background-image: url(../src/assets/3334896.jpg);
+    background-size: cover;
+    
+}
